[package]
name = "gmail-discord-bot-latest"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
open = "5.0"
thiserror = "1.0"